agregar pagina paisajes.html

--- a/paisajes.html
+++ b/paisajes.html
@@ -3,13 +3,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<title>Comenzando con la Fotografia</title>
-		<link rel="stylesheet" href="css/estilos.css">
+		<link rel="stylesheet" href="css/estilos-paisajes.css">
 	</head>
 	<body>
 		<div class="contenido">
 			<div id="slide">
 				<div id="titulo">
-					<h1>Comenzando con la Fotografia</h1>
+					<h1>Comenzando con los Paisajes</h1>
 				</div>
 				<div id="referencias">
 						<a href="index.html" class="indice" id="inicio">Inicio</a> 
@@ -19,17 +19,23 @@
 			</div>
 			<div class="imagenes">
 				
-				<div class="c1">
-					
-						<img src="img/foto_1.jpg" alt="Foto_principal"/>
+				<div class="foto">
+						<img src="img/paisajes.jpg" id="c1"/>
 				</div>
-				<div class="c2">
-						<img src="img/paisajes.jpg" alt="Paisajes"/>
-						<a href="paisajes.html">Paisajes</a>
+				<div class="foto">
+						<img src="img/paisajes.jpg" id="c2"/>
 				</div>
-				<div class="c3">
-						<img src="img/retratos.jpg" alt="Retratos"/>
-						<a href="retratos.html">Retratos</a>
+				<div class="foto">
+						<img src="img/paisajes.jpg" id="c3"/>
+				</div>
+				<div class="foto">
+						<img src="img/paisajes.jpg" id="c4"/>
+				</div>
+				<div class="foto">
+						<img src="img/paisajes.jpg" id="c5"/>
+				</div>
+				<div class="foto">
+						<img src="img/paisajes.jpg" id="c6" />
 				</div>
 			</div>
 		</div>
@@ -54,6 +60,7 @@
 				<a href="http://youtube.com"><img src="./iconos/youtube.svg" alt="Youtube" width="20" height="20">Comensando fotografia</a></br>
 			</div>				
 			<div>
+				<h3>Derechos</h3>
 				<h3>Derechos</h3>
 				Alexander Flórez </br>
 				&copy Copyright 2019
