agregar pagina retratos.html

--- a/retratos.html
+++ b/retratos.html
@@ -2,14 +2,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
-		<title>Comenzando con los Paisajes</title>
-		<link rel="stylesheet" href="css/estilos-paisajes.css">
+		<title>Comenzando con los Retratos</title>
+		<link rel="stylesheet" href="css/estilos-retratos.css">
 	</head>
 	<body>
 		<div class="contenido">
 			<div id="slide">
 				<div id="titulo">
-					<h1>Comenzando con los Paisajes</h1>
+					<h1>Comenzando con los Retratos</h1>
 				</div>
 				<div id="referencias">
 						<a href="index.html" class="indice" id="inicio">Inicio</a> 
@@ -20,22 +20,22 @@
 			<div class="imagenes">
 				
 				<div class="foto">
-						<img src="img/paisajes.jpg" id="c1"/>
+						<img src="img/retratos.jpg" id="c1"/>
 				</div>
 				<div class="foto">
-						<img src="img/paisajes.jpg" id="c2"/>
+						<img src="img/retratos.jpg" id="c2"/>
 				</div>
 				<div class="foto">
-						<img src="img/paisajes.jpg" id="c3"/>
+						<img src="img/retratos.jpg" id="c3"/>
 				</div>
 				<div class="foto">
-						<img src="img/paisajes.jpg" id="c4"/>
+						<img src="img/retratos.jpg" id="c4"/>
 				</div>
 				<div class="foto">
-						<img src="img/paisajes.jpg" id="c5"/>
+						<img src="img/retratos.jpg" id="c5"/>
 				</div>
 				<div class="foto">
-						<img src="img/paisajes.jpg" id="c6" />
+						<img src="img/retratos.jpg" id="c6" />
 				</div>
 			</div>
 		</div>
